--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,49 @@
+<div  class="container d-flex justify-content-center flex-column" style="width:30%">
+<div class= "p-2">
 <h2>Sign up</h2>
+</div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <div class= "p-2 input-grp">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="mb-3">
+      <%= f.label :email , class: "form-label "%>
+      <%= f.email_field :email, autofocus: true, class: "form-control ",autocomplete: "email" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="mb-3 ">
+    <%= f.label :username , class: "form-label" %>
+    <%= f.text_field :username , class: "form-control"%>
+    </div>
+    <div class="mb-3">
+      <%= f.label :phone , class: "form-label" %>
+      <%= f.number_field :phone , class: "form-control" %>
+    </div>
+
+    <div class="mb-3">
+      <%= f.label :password  , class: "form-label"%>
+      <% if @minimum_password_length  %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password" , class: "form-control"%>
+    </div>
+
+    <div class="mb-3">
+      <%= f.label :password_confirmation , class: "form-label" %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control"%>
+    </div>
+
+    <div class="actions mb-3">
+      <%= f.submit "Sign up", class: "btn btn-primary btn-lg btn-block"%>
+    </div>
+    <% end %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+     <div class="">
+      <span>Already a user? </span>
+      <%= link_to "Sign in", new_user_session_path, class: "btn btn-secondary btn-sm"%>
+    </div>
+   
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
