--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div  class=" mt-5 container d-flex justify-content-center flex-column" style="width:30%">
+  <div class= "d-flex justify-content-center p-2">
+    <h2>Forgot your password?</h2>
   </div>
+  <div class= "p-2 input-grp">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="mb-4">
+      <%= f.label :email , class: "form-label" %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email"  , class: "form-control" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <div class="actions mb-3 d-flex justify-content-center">
+      <%= f.submit "Send me reset password instructions", class: "btn btn-primary btn-lg btn-block"%>
+    </div>
+    <% end %>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <div class="d-flex justify-content-around">
+  <div>
+    <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-secondary btn-sm"%>
+  </div>
+  <div>
+    <%= link_to "Sign in", new_user_session_path, class: "btn btn-secondary btn-sm"%>
+  </div>
+</div>
+</div>
