--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">CarWheels</a>
+    <a class="navbar-brand" href="#">FireWheels</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,9 +10,15 @@
        
           <%= link_to "Home",root_path,class: "nav-link"%>
         </li>
-        <li class="nav-item">
-          <%= link_to "Log Out", destroy_user_session_path ,method: "delete" , class: "nav-link"%>
+      </ul>
+    </div>
+    <div class="d-flex justify-content-end">
+      <ul class="navbar-nav">
+        <% if user_signed_in? %>
+        <li class="nav-item me-5">
+          <%= link_to "Log Out", destroy_user_session_path ,method: "delete" , class: "nav-link btn btn-danger text-light btn-smr"%>
         </li>
+        <%end%>
         
         
       </ul>
