--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,14 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
         <li class="nav-item me-5">
-          <%= link_to "Log Out", destroy_user_session_path ,method: "delete" , class: "nav-link btn btn-danger text-light btn-smr"%>
+          <%= link_to "Log Out", destroy_user_session_path ,method: "delete" , class: "nav-link btn btn-danger text-light btn-sm"%>
+        </li>
+        <%else%>
+        <li class="nav-item me-3">
+          <%= link_to "Sign up", new_user_registration_path, class: "nav-link btn btn-primary text-light btn-sm"%>
+        </li>
+        <li class="nav-item me-5">
+          <%= link_to "Sign in", new_user_session_path , class: "nav-link btn btn-primary text-light btn-sm"%>
         </li>
         <%end%>
         
