--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,58 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<div  class=" mt-5 mb-5 container d-flex justify-content-center flex-column" style="width:30%">
+  <div class= "d-flex justify-content-center p-2">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+  </div>
+  <div class= "p-2 input-grp">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="mb-3">
+      <%= f.label :email , class: "form-label "%>
+      <%= f.email_field :email, autofocus: true, class: "form-control ",autocomplete: "email" %>
+    </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <div class="mb-3 ">
+      <%= f.label :username , class: "form-label" %>
+      <%= f.text_field :username , class: "form-control" ,autocomplete: "username" , value: current_user.username %>
+    </div>
+    <div class="mb-3">
+      <%= f.label :phone , class: "form-label" %>
+      <%= f.number_field :phone , class: "form-control" %>
+    </div>
+
+  <div class="mb-3">
+    <%= f.label :password , class: "form-label" %> <i>(leave blank if you don't want to change it)</i>
+    <%= f.password_field :password, autocomplete: "new-password" , class: "form-control" , class: "form-control"%>
     <% if @minimum_password_length %>
-      <br />
       <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="mb-3">
+    <%= f.label :password_confirmation , class: "form-label" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" , class: "form-control"%>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+  <div class="mb-3">
+    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
+    <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+ <div class="actions mb-3 d-flex justify-content-center">
+      <%= f.submit "Update", class: "btn btn-primary btn-lg btn-block"%>
+    </div>
+
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<div class="d-flex justify-content-between">
+  <div>
+    <h3>Cancel my account</h3>
+    <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete , class: "btn btn-danger btn-sm btn-block"%>
+  </div>
+  <div>
+    <%= link_to "Back", :back, class: "btn btn-secondary btn-sm btn-block mt-4" %>
+ </div>
+</div>
