--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,10 @@
     <div class="d-flex justify-content-end">
       <ul class="navbar-nav">
         <% if user_signed_in? %>
-        <li class="nav-item me-5">
+          <li class="nav-item me-3">
+          <%= link_to "update", edit_user_registration_path, class: "nav-link btn btn-primary text-light btn-sm"%>
+        </li>
+        <li class="nav-item me-3">
           <%= link_to "Log Out", destroy_user_session_path ,method: "delete" , class: "nav-link btn btn-danger text-light btn-sm"%>
         </li>
         <%else%>
