--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -5,10 +5,10 @@
   <div class= "p-2 input-grp">
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
-    <div class="mb-4">
-      <%= f.label :email , class: "form-label" %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email"  , class: "form-control" %>
-    </div>
+  <div class="mb-3">
+    <%= f.label :login,class: "form-label" %>
+    <%= f.text_field :login, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Email/Phone" %>
+  </div>
 
     <div class="actions mb-3 d-flex justify-content-center">
       <%= f.submit "Send me reset password instructions", class: "btn btn-primary btn-lg btn-block"%>
