--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,30 +1,28 @@
-<div  class=" mt-5 container d-flex justify-content-center flex-column" style="width:30%">
+<div  class=" mt-5 container d-flex justify-content-center flex-column w-30">
   <div class= "d-flex justify-content-center p-2">
       <h2>Change your password</h2>
   </div>
   <div class= "p-2 input-grp">
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    <%= f.hidden_field :reset_password_token %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <%= f.hidden_field :reset_password_token %>
 
-    <div class="mb-3">
-      <%= f.label :password, "New password" , class: "form-label"%><br />
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <div class="mb-3">
+        <%= f.label :password, "New password" , class: "form-label"%><br />
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <% end %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control" %>
+      </div>
+
+      <div class="mb-3">
+       <%= f.label :password_confirmation, "Confirm new password", class: "form-label" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" , class: "form-control"%>
+      </div>
+
+      <div class="actions mb-3 d-flex justify-content-center">
+        <%= f.submit "change my password", class: "btn btn-primary btn-lg btn-block"%>
+      </div>     
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control" %>
-    </div>
-
-    <div class="mb-3">
-    <%= f.label :password_confirmation, "Confirm new password", class: "form-label" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" , class: "form-control"%>
-    </div>
-
-    <div class="actions mb-3 d-flex justify-content-center">
-      <%= f.submit "change my password", class: "btn btn-primary btn-lg btn-block"%>
-    </div>     
-  <% end %>
-
- <!-- <%= render "devise/shared/links" %>  -->
 
 </div>
