--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -57,8 +57,8 @@
 
    <div class="mb-3">
         <%= f.label :color, class: "form-label me-1" %>
-        <%= f.select :color, Ad::COLOR, {}, class: "form-control", required: true, prompt:"--Select--"  %>
-        <%= f.text_field :color , class: "form-control mt-2", hidden: true %>
+        <%= f.select :color, Ad::COLOR, {}, class: "form-control color_field",onclick: 'func()' , required: true, prompt:"--Select--"  %>
+        <%= f.text_field :tempcolor , class: "form-control mt-2 temp_color", hidden: true %>
       </div>
 
        <div class="mb-3">
