--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -19,4 +19,12 @@
 <%= @ad.description%>
 </h3> <br>
 
+<div class='form-group'>
+    <% if @ad.images.any? %>
+      <% @ad.images.each do |img|%>
+        <%= image_tag img.image, class: "img-thumbnail", style: "max-width: 250px; and height: auto;" %>
+      <% end %>
+    <% end %>
+  </div>
+
 <%= link_to 'Back' ,ads_path%>
