--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -74,7 +74,7 @@
       </div>
 
       <div class="actions d-flex justify-content-center">
-        <%= f.submit "Submit Post", class: "btn btn-primary btn-lg btn-block" %>
+        <%= f.submit "Update Post", class: "btn btn-primary btn-lg btn-block" %>
       </div>
       <% end %>
     </div>
