--- a/app/views/after_ad_post/second_step.html.erb
+++ b/app/views/after_ad_post/second_step.html.erb
@@ -6,29 +6,33 @@
     <div class="progress">
       <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 66%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
+    <div class='form-group mt-4'>
+      <% if @ad.images.any? %>
+        <% @ad.images.each do |img|%>
+          <%= image_tag img, class: "img-thumbnail", style: "max-width: 90px; and height: auto;" %>
+        <% end %>
+      <% end %>
+    </div>
     <div class= "p-2 input-grp">
+      <div>
+        <% if @ad.errors.any? %>
+            <h2>
+              <%= pluralize(@ad.errors.count, 'error') %>
+              Prohibited from saving user
+            </h2>
+          <ol>
+            <% @ad.errors.full_messages.each do |msg| %>
+              <li> <%= msg %></li>
+            <% end %>
+          </ol>
+          <%end%>
+      </div>
+      <%= flash[:alert] if flash[:alert] %>
       <%= form_with(model: @ad, local: true, method: :put, url: wizard_path) do |f| %>
-      <%= hidden_field_tag :ad_id, @ad.id %>
-       <div class="mb-3">
-        <%= f.label "first_image", class: "form-label" %>
-        <%= f.file_field :first_image,name: "ad[images][]", multiple: false, direct_upload: true %>
-      </div>
-      <div class="mb-3">
-        <%= f.label :second_image, class: "form-label" %>
-        <%= f.file_field :second_image,name: "ad[images][]", multiple: false, direct_upload: true %>
-      </div>
-      <div class="mb-3">
-        <%= f.label :third_image, class: "form-label" %>
-        <%= f.file_field :third_image,name: "ad[images][]", multiple: false, direct_upload: true %>
-      </div>
-      <div class="mb-3">
-        <%= f.label :fourth_image, class: "form-label" %>
-        <%= f.file_field :fourth_image,name: "ad[images][]", multiple: false, direct_upload: true %>
-      </div>
-      <div class="mb-3">
-        <%= f.label :fifth_image, class: "form-label" %>
-        <%= f.file_field :fifth_image,name: "ad[images][]", multiple: false, direct_upload: true %>
-      </div>
+      <%= hidden_field_tag :adv, @ad.id %>
+       <div class="mb-4 mt-4">
+         <%= f.drag_and_drop_file_field :images, nil, accept: 'image/png, image/jpeg, image/gif, image/tiff', max: 5 %>
+       </div>
       <div class="actions d-flex justify-content-center">
         <%= f.submit "Save and Continue", class: "btn btn-primary btn-lg btn-block" %>
       </div>
@@ -39,7 +43,7 @@
         <%= link_to "Previous", :back, class: "btn btn-secondary btn-sm btn-block mt-4" %>
       </div>
       <div>
-        <%= link_to 'skip', next_wizard_path(ad: @ad), class: "btn btn-secondary btn-sm btn-block mt-4"%>
+        <%= link_to 'skip', next_wizard_path(adv: @ad), class: "btn btn-secondary btn-sm btn-block mt-4"%>
       </div>
     </div>
   </div>
