--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,9 +10,11 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require active_storage_drag_and_drop
  *= require_tree .
  *= require_self
  */
 @import "bootstrap/scss/bootstrap";
 @import "trix/dist/trix";
 @import "./actiontext.scss";
+
