--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2,3 +2,20 @@
   max-width: 500px;
   margin: 0 auto;
 }
+
+.m-w-75 {
+  max-width: 1500px;
+  margin: 0 auto;
+}
+
+#asdndz-ad_images{
+  max-width: 100%;
+}
+
+#myInput {
+  padding: 20px;
+  margin-top: -6px;
+  border: 0;
+  border-radius: 0;
+  background: #f1f1f1;
+}
