update Ad implemented

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -19,3 +19,12 @@
   border-radius: 0;
   background: #f1f1f1;
 }
+.img-title{
+  max-width: 250px;
+  height: auto;"
+}
+.img-w-90
+{
+  max-width: 90px;
+  height: auto;"
+}
