--- a/app/views/after_ad_post/second_step.html.erb
+++ b/app/views/after_ad_post/second_step.html.erb
@@ -6,10 +6,17 @@
     <div class="progress">
       <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 66%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
-    <div class='form-group mt-4'>
+    <div class='form-group mt-4 d-flex'>
       <% if @ad.images.any? %>
         <% @ad.images.each do |img|%>
-          <%= image_tag img, class: "img-thumbnail", style: "max-width: 90px; and height: auto;" %>
+        <div class="ms-2 me-2">
+          <div class="d-flex justify-content-center border border-primary ">
+            <%= link_to "X", after_ad_post_path(img: img, adv: @ad.id), method: :delete %>
+          </div>
+          <div>
+            <%= image_tag img, class: "img-w-90" %>
+          </div>
+        </div>
         <% end %>
       <% end %>
     </div>
@@ -31,7 +38,7 @@
       <%= form_with(model: @ad, local: true, method: :put, url: wizard_path) do |f| %>
       <%= hidden_field_tag :adv, @ad.id %>
        <div class="mb-4 mt-4">
-         <%= f.drag_and_drop_file_field :images, nil, accept: 'image/png, image/jpeg, image/gif, image/tiff', max: 5 %>
+         <%= f.drag_and_drop_file_field :images, nil, accept: 'image/png, image/jpeg, image/gif, image/tiff' %>
        </div>
       <div class="actions d-flex justify-content-center">
         <%= f.submit "Save and Continue", class: "btn btn-primary btn-lg btn-block" %>
