--- a/app/views/after_ad_post/third_step.html.erb
+++ b/app/views/after_ad_post/third_step.html.erb
@@ -1,8 +1,7 @@
-
 <div class="wrapper">
   <div  class=" mt-5 mb-5 container d-flex justify-content-center flex-column">
     <div class= "d-flex justify-content-center p-2">
-      <h2>Post an Ad third Step</h2>
+      <h2>Post an Ad</h2>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
@@ -19,25 +18,33 @@
               <li> <%= msg %></li>
             <% end %>
           </ol>
-          <%end%>
+        <%end%>
       </div>
       <%= flash[:alert] if flash[:alert] %>
-      <%= form_with(model: @ad, local: true) do |f| %>
-       <div class="mb-3">
-        <%= f.label :secondary_contact , class: "form-label" %>
-        <%= f.text_field :secondary_contact , class: "form-control", placeholder: "+92-3XX-XXXXXXX", required: true %>
-      </div>
-      <div class="mb-3">
-        <%= link_to "Feature your Post", "pay_path" , class: "btn btn-info btn-block mt-4" %>
-      </div>
-      <div class="actions d-flex justify-content-center">
-        <%= f.submit "Submit Post", class: "btn btn-primary btn-lg btn-block" %>
-      </div>
+      <%= form_with(model: @ad, local: true, method: :put, url: wizard_path) do |f| %>
+        <%= hidden_field_tag :adv, @ad.id %>
+        <% if @ad.featured? %>
+          <div>
+            <p>This ad is Featured!</p>
+          </div>
+        <% else %>
+          <div class="mb-3">
+            <%= link_to "Feature your Ad", checkout_path(adv: @ad.id) , class: "btn btn-info btn-block text-light mt-4" %>
+          </div>
+        <% end %>
+        <div class="mb-3">
+          <%= f.label :secondary_contact , class: "form-label" %>
+          <%= f.text_field :secondary_contact , class: "form-control", placeholder: "+92-3XX-XXXXXXX", required: true %>
+        </div>
+        <div class="actions d-flex justify-content-center">
+          <%= f.submit "Submit Post", class: "btn btn-primary btn-lg btn-block" %>
+        </div>
       <% end %>
     </div>
     <div class="mb-3 d-flex justify-content-center">
-     <div>
-     <%= link_to 'previous', previous_wizard_path(adv: @ad), class: "btn btn-secondary btn-sm btn-block mt-4" %>
-   </div>
+      <div>
+        <%= link_to 'previous', previous_wizard_path(adv: @ad), class: "btn btn-secondary btn-sm btn-block mt-4" %>
+      </div>
+    </div>
   </div>
 </div>
