--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,14 +9,22 @@
         <li class="nav-item">  
           <%= link_to "Home", root_path, class: "nav-link"%>
         </li>
+        <% if user_signed_in? %>
         <li class="nav-item">
           <%= link_to "Post new Ad", new_ad_path, class: "nav-link"%>
         </li>
+        <li class="nav-item">
+          <%= link_to "My Ads", ads_path(ads: "my_ads"), class: "nav-link"%>
+        </li>
+        <% end %>
       </ul>
     </div>
     <div class="d-flex justify-content-end">
       <ul class="navbar-nav">
         <% if user_signed_in? %>
+          <li class="nav-item me-3 pt-2">
+            <%= current_user.email %>
+          </li>
           <li class="nav-item me-3">
           <%= link_to "update", edit_user_registration_path, class: "nav-link btn btn-primary text-light btn-sm"%>
           </li>
