--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -11,6 +11,10 @@
     <%= select_tag :assembly, options_for_select(Ad::ASSEMBLY), prompt:"Assembly Type", class: "btn btn-secondary dropdown-toggle mw-100 w-25 me-3 ms-2 mt-3" %>
   </div>
   <div>
+    <%== pagy_bootstrap_nav(@pagy) %>
+
+  </div>
+  <div>
     <% @ads.each do |ad|%>
       <div class="container d-flex mb-3 mt-3 border border-primary rounded">
         <div>
