--- a/app/views/checkouts/show.html.erb
+++ b/app/views/checkouts/show.html.erb
@@ -5,3 +5,4 @@
 <div>
   <%= link_to "Back", :back, class: "btn btn-secondary btn-sm btn-block mt-4" %>
 </div>
+<script src="https://js.stripe.com/v3/"></script>
