--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -3,84 +3,5 @@
     <div class= "d-flex justify-content-center p-2">
       <h2>Post an Ad</h2>
     </div>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 33%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <div class= "p-2 input-grp">
-      <div>
-        <% if @ad.errors.any? %>
-            <h2>
-              <%= pluralize(@ad.errors.count, 'error') %>
-              Prohibited from saving user
-            </h2>
-          <ol>
-            <% @ad.errors.full_messages.each do |msg| %>
-              <li> <%= msg %></li>
-            <% end %>
-          </ol>
-          <%end%>
-      </div>
-      <%= form_with(model: @ad, local: true) do |f| %>
-
-      <div class="mb-3">
-        <%= f.label :city, class: "form-label me-1" %>
-        <%= f.select :city, Ad::CITIES, {}, autofocus: true, class: "form-control", required: true, prompt:"--Select--" %>
-      </div>
-
-       <div class="mb-3">
-        <%= f.label :milage , class: "form-label" %>
-        <%= f.number_field :milage , class: "form-control", placeholder: "in KM" ,required: true, step: :any %>
-      </div>
-
-      <div class="mb-3">
-        <%= f.label :make, class: "form-label me-1" %>
-        <%= f.select :make, Ad::MAKE, {}, class: "form-control",required: true, prompt:"--Select--" %>
-      </div>
-
-      <div class="mb-3">
-        <%= f.label :price , class: "form-label" %>
-        <%= f.number_field :price , class: "form-control", placeholder: "in PKR",required: true, step: :any %>
-      </div>
-
-      <div class="mb-3">
-        <%= f.label :engine_type, class: "form-label me-1" %>
-        <%= f.select :engine_type, Ad::ENGINE_TYPE, {}, class: "form-control",required: true, prompt:"--Select--" %>
-      </div>
-
-      <div class="mb-3">
-        <%= f.label :transmission, class: "form-label me-1" %>
-        <%= f.select :transmission, Ad::TRANSMISSION, {}, class: "form-control" ,required: true, prompt:"--Select--" %>
-      </div>
-
-      <div class="mb-3">
-        <%= f.label :capacity , class: "form-label" %>
-        <%= f.number_field :capacity , class: "form-control", placeholder: "in cc",required: true, step: :any %>
-      </div>
-
-      <div class="mb-3">
-        <%= f.label :color, class: "form-label me-1" %>
-        <%= f.select :color, Ad::COLOR, {}, class: "form-control color_field" , required: true, prompt:"--Select--"  %>
-        <%= f.text_field :color_detail , class: "form-control mt-2 color_detail d-none", placeholder: "Enter other color name" %>
-      </div>
-
-       <div class="mb-3">
-        <%= f.label :assembly, class: "form-label me-1" %>
-        <%= f.select :assembly, Ad::ASSEMBLY, {}, class: "form-control" ,required: true, prompt:"--Select--" %>
-      </div>
-
-      <div class="mb-3 ">
-      <%= f.label :description , class: "form-label" %>
-      <%= f.rich_text_area :description , class: "form-control",required: true %>
-      </div>
-
-      <div class="actions d-flex justify-content-center">
-        <%= f.submit "Submit Post", class: "btn btn-primary btn-lg btn-block" %>
-      </div>
-      <% end %>
-    </div>
-    <div class="mb-3 d-flex justify-content-center">
-     <div>
-     <%= link_to "Back", :back, class: "btn btn-secondary btn-sm btn-block mt-4" %>
-   </div>
-  </div>
+   <%= render "shared/ad_form", ad: @ad %>
 </div>
