--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,6 +16,9 @@
         <li class="nav-item">
           <%= link_to "My Ads", ads_path(ads: "my_ads"), class: "nav-link"%>
         </li>
+        <li class="nav-item">
+          <%= link_to "Favourite Ads", ads_path(ads: "fav_ads"), class: "nav-link"%>
+        </li>
         <% end %>
       </ul>
     </div>
