--- a/app/views/after_ad_post/second_step.html.erb
+++ b/app/views/after_ad_post/second_step.html.erb
@@ -4,7 +4,8 @@
       <h2>Post an Ad</h2>
     </div>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 66%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 66%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+      </div>
     </div>
     <div class='form-group mt-4 d-flex'>
       <% if @ad.images.any? %>
@@ -23,18 +24,9 @@
     <div class= "p-2 input-grp">
       <div>
         <% if @ad.errors.any? %>
-            <h2>
-              <%= pluralize(@ad.errors.count, 'error') %>
-              Prohibited from saving user
-            </h2>
-          <ol>
-            <% @ad.errors.full_messages.each do |msg| %>
-              <li> <%= msg %></li>
-            <% end %>
-          </ol>
-          <%end%>
+          <%= render "shared/error_messages", resource: @ad %>
+        <% end %>
       </div>
-      <%= flash[:alert] if flash[:alert] %>
       <%= form_with(model: @ad, local: true, method: :put, url: wizard_path) do |f| %>
       <%= hidden_field_tag :ad_id, @ad.id %>
        <div class="mb-4 mt-4">
