--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <%= render partial: 'shared/navbar'%>
+    <%= render partial: 'shared/flash_messages'%>
     <%= yield %>
   </body>
 </html>
