--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
 
         <div class="mb-3">
           <%= f.label :phone , class: "form-label" %>
-          <%= f.number_field :phone , class: "form-control" %>
+          <%= f.text_field :phone , class: "form-control", placeholder: "+92-3XX-XXXXXXX" %>
         </div>
 
         <div class="mb-3">
