--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -20,12 +20,12 @@
 .img-title{
   max-width: 250px;
   min-width: 250px;
-  height: auto;"
+  height: auto;
 }
 .img-w-90
 {
   max-width: 90px;
-  height: auto;"
+  height: auto;
 }
 .buttons-div
 {
