--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -3,6 +3,6 @@
     <div class= "d-flex justify-content-center p-2">
       <h2>Update Ad</h2>
     </div>
-    <%= render "shared/ad_form", ad: @ad %>
+    <%= render "ad_form", ad: @ad %>
   </div>
 </div>
