--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -72,10 +72,10 @@
 
               <%= link_to "Delete", ad_path(ad), method: :delete, class: "btn btn-danger ms-2 me-2 mt-2 mb-2" %>
             <% if ad.closed? %>
-                <%= link_to "Activate", open_ad_path(ad), class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
+                <%= link_to "Activate", open_ad_path(ad), method: :patch, class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
             <% else %>
-                <%= link_to "close", close_ad_path(ad), class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
-          <% end %>
+                <%= link_to "close", close_ad_path(ad), method: :patch, class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
+            <% end %>
           <% end %>
         </div>
       </div>
