--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -3,5 +3,5 @@
     <div class= "d-flex justify-content-center p-2">
       <h2>Post an Ad</h2>
     </div>
-   <%= render "shared/ad_form", ad: @ad %>
+   <%= render "ad_form", ad: @ad %>
 </div>
