--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -61,20 +61,20 @@
           </p>
         </div>
         <div class="ms-5 mt-3 border border-primary buttons-div">
-            <%= link_to "Show", ad_path(ad), class: "btn btn-primary ms-2 me-2 mt-2 mb-2" %>
-          <% if (current_user.favourite_ads.exists?(ad.id)) %>
-            <%= link_to "Unfavourite", unfavourite_ad_path(ad), class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
+          <%= link_to "Show", ad_path(ad), class: "btn btn-primary ms-2 me-2 mt-2 mb-2" %>
+          <% if (user_signed_in? && current_user.favourite_ads.exists?(ad.id)) %>
+            <%= link_to "Unfavourite", favourite_path(ad), method: :delete, class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
           <% else %>
-            <%= link_to "Favourite", favourite_ad_path(ad), class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
+            <%= link_to "Favourite", favourites_path(id: ad), method: :post, class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
           <% end %>
           <% if ad.user == current_user %>
               <%= link_to "Edit", edit_ad_path(ad), class: "btn btn-primary ms-2 me-2 mt-2 mb-2" %>
 
               <%= link_to "Delete", ad_path(ad), method: :delete, class: "btn btn-danger ms-2 me-2 mt-2 mb-2" %>
             <% if ad.closed? %>
-                <%= link_to "Activate", open_ad_path(ad), method: :patch, class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
+                <%= link_to "Activate", activate_ad_path(ad), method: :patch, class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
             <% else %>
-                <%= link_to "close", close_ad_path(ad), method: :patch, class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
+                <%= link_to "close", deactivate_ad_path(ad), method: :patch, class: "btn btn-secondary ms-2 me-2 mt-2 mb-2" %>
             <% end %>
           <% end %>
         </div>
