--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,14 +1,44 @@
 <div class="container">
   <div class="mb-3">
-    <%= select_tag :make, options_for_select(Ad::MAKE), prompt:"Car Make/Model", class: "btn btn-secondary dropdown-toggle  w-25 me-3 ms-2 mt-3" %>
-    <%= select_tag :city, options_for_select(Ad::CITIES), prompt:"city", class: "btn btn-secondary dropdown-toggle w-25  me-3 ms-2 mt-3" %>
-    <%= select_tag :price, options_for_select(Ad::CITIES), prompt:"Price Range", class: "btn btn-secondary dropdown-toggle mw-100 w-25 me-3 ms-2 mt-3" %>
-    <%= select_tag :engine_type, options_for_select(Ad::ENGINE_TYPE), prompt:"Engine Details", class: "btn btn-secondary dropdown-toggle mw-100 w-25 me-3 ms-2 mt-3" %>
-    <%= select_tag :transmission, options_for_select(Ad::TRANSMISSION), prompt:"Transmission Type", class: "btn btn-secondary dropdown-toggle mw-100 w-25 me-3 ms-2 mt-3" %>
-    <%= select_tag :color, options_for_select(Ad::COLOR), prompt:"Color", class: "btn btn-secondary dropdown-toggle mw-100 w-25 me-3 ms-2 mt-3" %>
-    <%= select_tag :milage, options_for_select(Ad::CITIES), prompt:"Milage", class: "btn btn-secondary dropdown-toggle mw-100 w-25 me-3 ms-2 mt-3" %>
-    <%= select_tag :capacity, options_for_select(Ad::CITIES), prompt:"Engine Capacity", class: "btn btn-secondary dropdown-toggle mw-100 w-25 me-3 ms-2 mt-3" %>
-    <%= select_tag :assembly, options_for_select(Ad::ASSEMBLY), prompt:"Assembly Type", class: "btn btn-secondary dropdown-toggle mw-100 w-25 me-3 ms-2 mt-3" %>
+    <%= form_with(model: @ad, local: true) do |f| %>
+      <div class=" mb-2 d-flex ">
+        <%= f.label :make , class: "form-label me-2"%>
+        <%= f.select :make, Ad::MAKE, { include_blank: true }, class: "form-control w-25" %>
+      </div>
+      <div class="mb-3 d-flex">
+        <%= f.label :city , class: "form-label me-2"%>
+        <%= f.select :city, Ad::CITIES, { include_blank: true }, class: "form-control w-25" %>
+      </div>
+      <div class="mb-3 d-flex">
+        <%= f.label "Price Range" , class: "form-label me-2"%>
+        <%= f.select :peice , Ad::CITIES, { include_blank: true }, class: "form-control w-25" %>
+      </div>
+      <div class="mb-3 d-flex">
+        <%= f.label :engine_type , class: "form-label me-2"%>
+        <%= f.select :engine_type, Ad::ENGINE_TYPE, { include_blank: true }, class: "form-control w-25" %>
+      </div>
+      <div class="mb-3 d-flex">
+        <%= f.label :transmission , class: "form-label me-2"%>
+        <%= f.select :transaction , Ad::TRANSMISSION, { include_blank: true }, class: "form-control w-25" %>
+      </div>
+      <div class="mb-3 d-flex">
+        <%= f.label :color , class: "form-label me-2"%>
+        <%= f.text_field :color, class: "form-control w-25" %>
+      </div>
+      <div class="mb-3 d-flex">
+        <%= f.label :milage , class: "form-label me-2"%>
+        <%= f.text_field :milage, class: "form-control w-25" %>
+      </div>
+      <div class="mb-3 d-flex">
+        <%= f.label :capacity , class: "form-label me-2"%>
+        <%= f.text_field :capacity, class: "form-control w-25" %>
+      </div>
+      <div class="mb-3 d-flex">
+        <%= f.label :assembly , class: "form-label me-2"%>
+        <%= f.select :assembly, Ad::ASSEMBLY, { include_blank: true }, class: "form-control w-25" %>
+      </div>
+      <%= f.submit "Search", class: "btn btn-success btn-lg btn-block" %>
+    <% end %>
   </div>
   <div>
     <%== pagy_bootstrap_nav(@pagy) %>
